--- a/circle.yml
+++ b/circle.yml
@@ -1,2 +1,6 @@
-general:
-  build_dir: spaces-search-api-server
+test:  
+  override:
+    - lein test && lein install:
+        pwd: spaces-search-api-server
+    - lein test:
+        pwd: spaces-search-api-client
